# timespent

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test_timespent.py
src/test_timespent/: __init__.py
src/timespent/: __main__.py  commit.py
timespent/: __init__.py  timespent.py
